--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
+    "fs-extra": "^11.2.0",
     "prettier": "^3.3.3",
     "tsx": "^4.19.1",
     "typescript": "^5.6.3",
@@ -32,5 +33,8 @@
     "eslint": "^9.13.0",
     "globals": "^15.11.0",
     "typescript-eslint": "^8.11.0"
+  },
+  "bin": {
+    "my-boilerplate": ".cli/cli.js"
   }
 }
